syntax = "proto3";

package ibc.applications.interchain_swap.v1;

option go_package = "github.com/ibcswap/ibcswap/v6/modules/apps/101-interchain-swap/types";

import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

// Type defines a classification of swap messages
enum SwapMessageType {
  option (gogoproto.goproto_enum_prefix) = false;

  // Default zero value enumeration
  TYPE_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "UNSPECIFIED"];

  TYPE_CREATE_POOL = 1 [(gogoproto.enumvalue_customname) = "CREATE_POOL"];
  TYPE_SINGLE_DEPOSIT = 2 [(gogoproto.enumvalue_customname) = "SINGLE_DEPOSIT"];
  TYPE_MULTI_DEPOSIT = 3 [(gogoproto.enumvalue_customname) = "MULTI_DEPOSIT"];
  TYPE_SINGLE_WITHDRAW = 4 [(gogoproto.enumvalue_customname) = "SINGLE_WITHDRAW"];
  TYPE_MULTI_WITHDRAW = 5 [(gogoproto.enumvalue_customname) = "MULTI_WITHDRAW"];
  TYPE_LEFT_SWAP = 6 [(gogoproto.enumvalue_customname) = "LEFT_SWAP"];
  TYPE_RIGHT_SWAP = 7 [(gogoproto.enumvalue_customname) = "RIGHT_SWAP"];
}

message StateChange {
  repeated cosmos.base.v1beta1.Coin in = 1;
  repeated cosmos.base.v1beta1.Coin out = 2;
  repeated cosmos.base.v1beta1.Coin poolTokens = 3;
}


// IBCSwapPacketData is comprised of a raw transaction, type of transaction and optional memo field.
message IBCSwapPacketData {
  SwapMessageType   type = 1;
  // marshall data of transactions
  bytes  data = 2;
  // current pool states on source chain, could be empty.
  StateChange  stateChange = 3;
}


